kubernetes/deployment-mesoor-dev/templates/data-sync-cgl-candidate-customer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sync-gllue-pull-candidate-cgl-consumer
  namespace: tip
spec:
  selector:
    matchLabels:
      app: data-sync-gllue-pull-candidate-cgl-consumer
      version: v1
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: data-sync-gllue-pull-candidate-cgl-consumer
        version: v1
        tier: backend
        track: stable
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: data-sync-gllue-pull-candidate-cgl-consumer
          image: cr.mesoor.com/develop/data-sync-cdc:v20230927-02
          imagePullPolicy: Always
          command: [ "python", "./channel/gllue/executor/pull_candidate/consumer.py"]
      imagePullSecrets:
        - name: crmesoor-pullsecret
