kubernetes/deployment-mesoor-dev/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sync-v2-entity-storage-server
  namespace: tip
spec:
  selector:
    matchLabels:
      app: data-sync-v2-entity-storage-server
      version: v1
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: data-sync-v2-entity-storage-server
        version: v1
        tier: backend
        track: stable
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: data-sync-v2-entity-storage-server
          image: cr.mesoor.com/develop/data-sync-cdc:v20230921-01
          imagePullPolicy: Always
          command: [ "python", "./entityStorageServer/server.py"]
      imagePullSecrets:
        - name: crmesoor-pullsecret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sync-v2-gllue-pull-push
  namespace: tip
spec:
  selector:
    matchLabels:
      app: data-sync-v2-gllue-pull-push
      version: v1
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: data-sync-v2-gllue-pull-push
        version: v1
        tier: backend
        track: stable
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: data-sync-v2-gllue-pull-push
          image: cr.mesoor.com/production/data-sync-cdc:v20230718-01
          imagePullPolicy: Always
          command: [ "python", "./channel/gllue/executor/sync_candidate.py"]
      imagePullSecrets:
        - name: crmesoor-pullsecret
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sync-gllue-push-joborder-waifu
  namespace: tip
spec:
  selector:
    matchLabels:
      app: data-sync-gllue-push-joborder-waifu
      version: v1
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: data-sync-gllue-push-joborder-waifu
        version: v1
        tier: backend
        track: stable
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: data-sync-gllue-push-joborder-waifu
          image: cr.mesoor.com/develop/data-sync-cdc:v20230925-01
          imagePullPolicy: Always
          command: [ "python", "./channel/gllue/executor/push_job_order_tag_v2/run_v3.py"]
      imagePullSecrets:
        - name: crmesoor-pullsecret
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sync-gllue-push-candidate-waifu
  namespace: tip
spec:
  selector:
    matchLabels:
      app: data-sync-gllue-push-candidate-waifu
      version: v1
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: data-sync-gllue-push-candidate-waifu
        version: v1
        tier: backend
        track: stable
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: data-sync-gllue-push-candidate-waifu
          image: cr.mesoor.com/develop/data-sync-cdc:v20230921-01
          imagePullPolicy: Always
          command: [ "python", "./channel/gllue/executor/push_candidate_tag/run_v3.py"]
      imagePullSecrets:
        - name: crmesoor-pullsecret
