kubernetes/deployment-mesoor-dev/templates/fuzeRouteServer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sync-v2-fuze-route-server
  namespace: tip
spec:
  selector:
    matchLabels:
      app: data-sync-v2-fuze-route-server
      version: v1
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: data-sync-v2-fuze-route-server
        version: v1
        tier: backend
        track: stable
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: data-sync-v2-fuze-route-server
          image: cr.mesoor.com/production/data-sync-cdc:v20230811-01
          imagePullPolicy: Always
          command: [ "python", "./fuzeRouteServer/server.py"]
      imagePullSecrets:
        - name: crmesoor-pullsecret
