kubernetes/deployment-mesoor-dev/templates/kafkaStorageServer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sync-kafka-storage-server
  namespace: tip
spec:
  selector:
    matchLabels:
      app: data-sync-kafka-storage-server
      version: v1
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: data-sync-kafka-storage-server
        version: v1
        tier: backend
        track: stable
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: data-sync-kafka-storage-server
          image: cr.mesoor.com/develop/data-sync-cdc:v20230925-01
          imagePullPolicy: Always
          command: [ "python", "./kafkaStorageServer/server.py"]
      imagePullSecrets:
        - name: crmesoor-pullsecret
